# invenio-remote-user-data-kcworks

./: .gitignore  .gitmodules  CHANGES.md  INSTALL.rst  MANIFEST.in  Pipfile  README.md  VERSION  authors.rst  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: CI.yml  tests.yml
invenio_remote_user_data/: __init__.py  cli.py  config.py  ext.py  permissions.py  proxies.py  queues.py  service.py  signals.py  tasks.py  utils.py  views.py
invenio_remote_user_data/components/: groups.py
invenio_remote_user_data_kcworks/: __init__.py  api.py  blueprints.py  cli.py  client.py  config.py  errors.py  ext.py  groups.py  permissions.py  proxies.py  queues.py  service.py  signals.py  tasks.py  types.py  utils.py  views.py
invenio_remote_user_data_kcworks/cli/: main.py  names.py  users.py
invenio_remote_user_data_kcworks/components/: groups.py
invenio_remote_user_data_kcworks/data/: __init__.py
invenio_remote_user_data_kcworks/data/given_name_variants/: README.md  __init__.py
invenio_remote_user_data_kcworks/jsonschemas/names/: name-v1.0.0.json
invenio_remote_user_data_kcworks/services/: __init__.py  config.py  group_roles.py  name_similarity.py  names_sync.py  record_username_sync.py  service.py
invenio_remote_user_data_kcworks/services/components/: __init__.py  cited_names_component.py
invenio_remote_user_data_kcworks/types/: __init__.py  auth.py  broker_payload.py  names.py  orcid.py  profiles_api.py  users.py
invenio_remote_user_data_kcworks/utils/: auth.py  broker.py  dicts.py  login_sync.py  names.py  orcid_payload.py  record_metadata.py  redirect.py
scripts/: use_nested_dependencies.py
tests/: conftest.py  env_defaults.py  test_api.py  test_cli.py  test_components_groups.py  test_ext.py  test_service.py  test_views.py
tests/api/: conftest.py  integration.py  test_cited_names_component.py  test_ingest_profiles_dump_task.py  test_name_similarity.py  test_names_sync.py  test_names_sync_backfill.py  test_remote_endpoints.py  test_user_data_sync.py
tests/api/authentication/: test_single_sign_out.py  test_single_sign_out_webhook.py
tests/api/client/: __init__.py  test_session_broker_api_client.py  test_user_data_api_client.py
tests/api/group_data/: test_group_data_update_service.py
tests/api/names/: test_cited_names_component.py  test_name_similarity.py  test_names_sync.py  test_names_sync_backfill.py  test_names_sync_service.py
tests/api/user_data/: test_auth_update_transforms.py  test_kc_username_propagation.py  test_user_association.py  test_user_update_service.py  test_username_ingest_service.py  test_webhook_signals.py
tests/api/users/: test_ingest_profiles_dump_task.py  test_ingest_user_by_kc_username.py  users_ingest_integration.py
tests/cli/: test_user_data_cli.py  test_user_data_update.py
tests/pytest_plugins/: __init__.py  pytest_live_status.py
tests/ui/: conftest.py  integration.py  test_authentication.py
tests/ui/authentication/: test_broker_payload_processing.py  test_broker_response_handling.py  test_silent_sso_checks.py  test_single_sign_out.py  test_single_sign_out_local_logout.py
