[build-system]
build-backend = "setuptools.build_meta"
requires = ["babel>2.8", "setuptools>=61", "wheel"]

[project]
name = "invenio-remote-user-data-kcworks"
version = "0.6.1-beta3"

description = "An extension to draw user data from remote sources into the Knowledge Commons Works InvenioRDM instance"
readme = "README.md"
keywords = ["invenio", "inveniordm", "research", "users"]

license = "MIT"
authors = [{ name = "Mesh Research", email = "scottia4@msu.edu" }]
requires-python = ">=3.12"

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "celery",
  "click",
  "deepdiff",
  "invenio-app-rdm<14",
  "invenio-communities",
  "invenio-group-collections-kcworks",
  "invenio-queues",
  "invenio-search",
  "invenio-utilities-tuw",
  "marshmallow-utils>=0.12",           # EDTFLevel2DateString (used by invenio-rdm-records thesis)
  "opensearch-dsl",
  "pydantic",
  "standard-pkg-resources",            # pkg_resources required by fs (transitive) at runtime
]

optional-dependencies.tests = [
  "check-manifest",
  "coverage",
  "invenio-stats-dashboard",
  "pip-tools",
  "pipenv",
  "pytest>=7.3.2",
  "pytest-invenio>=3.3,<4",
  "pytest-runner",
  "requests-mock",
]

urls.Homepage = "https://github.com/MESH-Research/invenio-remote-user-data-kcworks"

scripts.user-data = "invenio_remote_user_data_kcworks.cli:cli"
entry-points."flask.commands".user-data = "invenio_remote_user_data_kcworks.cli:cli"
entry-points."invenio_base.api_apps".invenio_remote_user_data_kcworks = "invenio_remote_user_data_kcworks.ext:InvenioRemoteUserData"
entry-points."invenio_base.api_blueprints".invenio_remote_user_data_kcworks = "invenio_remote_user_data_kcworks.views:create_api_blueprint"
entry-points."invenio_base.api_finalize_app".invenio_remote_user_data_kcworks = "invenio_remote_user_data_kcworks.ext:finalize_app"
entry-points."invenio_base.apps".invenio_remote_user_data_kcworks = "invenio_remote_user_data_kcworks.ext:InvenioRemoteUserData"
entry-points."invenio_base.finalize_app".invenio_remote_user_data_kcworks = "invenio_remote_user_data_kcworks.ext:finalize_app"
entry-points."invenio_celery.tasks".invenio_remote_user_data_kcworks = "invenio_remote_user_data_kcworks.tasks"
entry-points."invenio_queues.queues".invenio_remote_user_data_kcworks = "invenio_remote_user_data_kcworks.queues:declare_queues"

[tool.uv.sources]
invenio-group-collections-kcworks = { path = "../invenio-group-collections-kcworks", editable = true }
invenio-stats-dashboard = { path = "../invenio-stats-dashboard", editable = true }
invenio-communities = { path = "../invenio-communities", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
  "**/*.ipynb",    # Exclude Jupyter notebook files
  "app_data",
  "docs",
  "node_modules",
  "scripts",
  "tests/helpers",
]
# temporarily removed C for complexity checks
lint.select = ["B", "D", "DOC", "E", "F", "I", "UP"]
# Now Ruff handles formatting, so enable formatting rules
lint.ignore = [
  "D412", # Missing blank line before closing docstring
  # Keep some warnings disabled
  "W1", # Indentation warnings
  "W2", # Whitespace warnings
  "W3", # Blank line warnings
]
lint.per-file-ignores."__init__.py" = ["D104", "E402", "F401"]
# Ensure consistent import sorting - explicitly declare tests as first-party
lint.isort.known-first-party = ["invenio_stats_dashboard", "tests"]
lint.pydocstyle.convention = "google"
lint.preview = true

[tool.isort]
profile = "black"
line_length = 88
verbose = true
multi_line_output = 3 # Vertical hanging indent
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip = [
  "__pycache__", # Skip cache directories
  # ".venv",  # Skip virtual environment
  # "node_modules",  # Skip node modules
]

[tool.check-manifest]
ignore = [
  "* .mo",
  "*.bin",
  "*.gitkeep",
  ".*-requirements.txt",
  ".bzrignore",
  ".DS_Store",
  ".egg-info",
  ".egg-info/*",
  ".gitattributes",
  ".github/*",
  ".gitignore",
  ".hgsigs",
  ".hgtags",
  ".hgignore",
  ".travis.yml",
  "Jenkinsfile",
  "PKG-INFO",
  "setup.cfg",
  "*.lock",
  "Pipfile",
  ".vscode/*",
]

[tool.pytest.ini_options]
addopts = """
--ruff --doctest-modules
--log-cli-level=DEBUG
--ignore=app_data
--ignore=docs
--ignore=node_modules
--ignore=scripts
--ignore=tests/helpers
--ignore=site/kcworks/dependencies/invenio-communities
--ignore=site/kcworks/dependencies/invenio-group-collections-kcworks
--ignore=site/kcworks/dependencies/invenio-modular-deposit-form
--ignore=site/kcworks/dependencies/invenio-modular-detail-page
--ignore=site/kcworks/dependencies/invenio-rdm-records
--ignore=site/kcworks/dependencies/invenio-record-importer-kcworks
--ignore=site/kcworks/dependencies/invenio-remote-api-provisioner
--ignore=site/kcworks/dependencies/invenio-remote-user-data-kcworks
--ignore=site/kcworks/dependencies/invenio-vocabularies
--ignore=site/kcworks/dependencies/invenio-stats-dashboard
--ignore=site/kcworks/services/search/index_templates
--cov=invenio_remote_user_data_kcworks 
--cov-report=term-missing
"""
norecursedirs = []
log_cli_level = "DEBUG"
isort_show_files = true
plugins = []
testpaths = ["tests", "invenio_remote_user_data_kcworks"]

[tool.coverage.run]
omit = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
ignore_missing_imports = true
follow_imports = "skip"
allow_untyped_globals = true
exclude = ['^tests/']

[tool.babel.compile_catalog]
directory = "translations/"
use-fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "Mesh Research"
msgid_bugs_address = "scottia4@msu.edu"
mapping-file = "translations/babel.ini"
output-file = "translations/messages.pot"
add-comments = "NOTE"

[tool.babel.init_catalog]
input-file = "translations/messages.pot"
output-dir = "translations/"

[tool.babel.update_catalog]
input-file = "translations/messages.pot"
output-dir = "translations/"

[tool.bumpver]
current_version = "0.6.1-beta3"
version_pattern = "MAJOR.MINOR.PATCH[-TAGNUM]"
commit_message = "Bumping version {old_version} -> {new_version}."
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['^version = "{version}"', '^current_version = "{version}"']
"README.md" = ['^Version {version}']
VERSION = ['^"{version}"']
"invenio_remote_user_data_kcworks/__init__.py" = ['^__version__ = "{version}"']

[tool.pylsp.plugins.jedi]
extra_paths = [
  "../../..",  # kcworks (site/)
  "../invenio-communities",
  "../invenio-group-collections-kcworks",
  "../invenio-stats-dashboard",
]

[tool.pydocstyle]
add_ignore = "D401"
