[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "wheel"]

[project]
name = "invenio-remote-user-data-kcworks"
version = "1.0.0"
description = "An extension to draw user data from remote sources into the Knowledge Commons Works InvenioRDM instance"
readme = "README.md"
keywords = ["invenio", "inveniordm", "research", "users"]
license = "MIT"
authors = [{ name = "Mesh Research", email = "scottia4@msu.edu" }]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "celery",
  "click",
  "deepdiff",
  "invenio-app-rdm<14",
  "invenio-communities",
  "invenio-group-collections-kcworks",
  "invenio-queues",
  "invenio-search",
  "invenio-utilities-tuw",
  "jellyfish",                         # Phonetic encoding (Metaphone) for Names dedup sweep
  "marshmallow-utils>=0.12",           # EDTFLevel2DateString (used by invenio-rdm-records thesis)
  "pydantic",
  "standard-pkg-resources",            # pkg_resources required by fs (transitive) at runtime
]
optional-dependencies.dev = ["bumpver", "check-manifest", "pip-tools", "pipenv"]
optional-dependencies.tests = [
  "coverage",
  "pytest>=7.3.2",
  "pytest-invenio>=3.3,<4",
  "pytest-runner",
  "requests-mock",
]
urls.Homepage = "https://github.com/MESH-Research/invenio-remote-user-data-kcworks"
scripts.user-data = "invenio_remote_user_data_kcworks.cli.main:cli"
entry-points."flask.commands".user-data = "invenio_remote_user_data_kcworks.cli.main:cli"
entry-points."invenio_base.api_apps".invenio_remote_user_data_kcworks = "invenio_remote_user_data_kcworks.ext:InvenioRemoteUserData"
entry-points."invenio_base.api_blueprints".invenio_remote_user_data_kcworks = "invenio_remote_user_data_kcworks.blueprints:create_api_blueprint"
entry-points."invenio_base.apps".invenio_remote_user_data_kcworks = "invenio_remote_user_data_kcworks.ext:InvenioRemoteUserData"
entry-points."invenio_base.blueprints".invenio_remote_user_data_kcworks_sso = "invenio_remote_user_data_kcworks.blueprints:create_sso_blueprint"
entry-points."invenio_celery.tasks".invenio_remote_user_data_kcworks = "invenio_remote_user_data_kcworks.tasks"
entry-points."invenio_queues.queues".invenio_remote_user_data_kcworks = "invenio_remote_user_data_kcworks.queues:declare_queues"

[dependency-groups]
dev = ["bumpver>=2025.1131"]

[tool.setuptools]
package-data.invenio_remote_user_data_kcworks = [
  "data/given_name_variants/*.csv",
  "data/given_name_variants/LICENSE",
  "data/given_name_variants/README.md",
]

[tool.uv]
sources.invenio-group-collections-kcworks = { path = "../invenio-group-collections-kcworks", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
  "**/*.ipynb",    # Exclude Jupyter notebook files
  "app_data",
  "docs",
  "node_modules",
  "scripts",
  "tests/helpers",
]
# temporarily removed C for complexity checks
lint.select = ["B", "D", "DOC", "E", "F", "I", "UP"]
# Now Ruff handles formatting, so enable formatting rules
lint.ignore = [
  "D412", # Missing blank line before closing docstring
  # Keep some warnings disabled
  "W1", # Indentation warnings
  "W2", # Whitespace warnings
  "W3", # Blank line warnings
]
lint.per-file-ignores."__init__.py" = ["D104", "E402", "F401"]
# Ensure consistent import sorting - explicitly declare tests as first-party
lint.isort.known-first-party = ["invenio_stats_dashboard", "tests"]
lint.pydocstyle.convention = "google"
lint.preview = true

[tool.isort]
profile = "black"
line_length = 88
verbose = true
multi_line_output = 3 # Vertical hanging indent
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip = [
  "__pycache__", # Skip cache directories
  # ".venv",  # Skip virtual environment
  # "node_modules",  # Skip node modules
]

[tool.check-manifest]
ignore = [
  "* .mo",
  "*.bin",
  "*.gitkeep",
  ".*-requirements.txt",
  ".bzrignore",
  ".DS_Store",
  ".egg-info",
  ".egg-info/*",
  ".gitattributes",
  ".github/*",
  ".gitignore",
  ".hgsigs",
  ".hgtags",
  ".hgignore",
  ".travis.yml",
  "Jenkinsfile",
  "PKG-INFO",
  "setup.cfg",
  "*.lock",
  "Pipfile",
  ".vscode/*",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
ignore_missing_imports = true
follow_imports = "skip"
allow_untyped_globals = true
exclude = ["^tests/"]

[tool.pytest]
ini_options.addopts = """
--ruff --doctest-modules
--ignore=docs
--ignore=node_modules
--ignore=scripts
--ignore=tests/helpers
--cov=invenio_remote_user_data_kcworks
--cov-report=term-missing
"""
ini_options.norecursedirs = []
ini_options.log_cli_level = "DEBUG"
ini_options.isort_show_files = true
ini_options.plugins = []
ini_options.testpaths = ["tests", "invenio_remote_user_data_kcworks"]

[tool.coverage]
run.omit = []

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bumping version {old_version} -> {new_version}."
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false
file_patterns."pyproject.toml" = [
  '^version = "{version}"',
  '^current_version = "{version}"',
]
file_patterns."README.md" = ["^Version {version}"]
file_patterns.VERSION = ['^"{version}"']
file_patterns."invenio_remote_user_data_kcworks/__init__.py" = [
  '^__version__ = "{version}"',
]

[tool.pydocstyle]
add_ignore = "D401"

[tool.babel]
compile_catalog.directory = "translations/"
compile_catalog.use-fuzzy = true
extract_messages.copyright_holder = "Mesh Research"
extract_messages.msgid_bugs_address = "scottia4@msu.edu"
extract_messages.mapping-file = "translations/babel.ini"
extract_messages.output-file = "translations/messages.pot"
extract_messages.add-comments = "NOTE"
init_catalog.input-file = "translations/messages.pot"
init_catalog.output-dir = "translations/"
update_catalog.input-file = "translations/messages.pot"
update_catalog.output-dir = "translations/"

[tool.pylsp]
plugins.jedi.extra_paths = [
  "../../..",                             # kcworks (site/)
  "../invenio-communities",
  "../invenio-group-collections-kcworks",
  "../invenio-stats-dashboard",
]
