[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "wheel"]

[project]
name = "invenio-remote-user-data-kcworks"
version = "1.0.0"
description = "An extension to draw user data from remote sources into the Knowledge Commons Works InvenioRDM instance"
readme = "README.md"
keywords = ["invenio", "inveniordm", "research", "users"]

license = { file = "LICENSE" }
authors = [{ name = "Mesh Research", email = "scottia4@msu.edu" }]
requires-python = ">=3.9"

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "celery",
  "click",
  "deepdiff",
  "invenio-app-rdm<13",
  "invenio-group-collections-kcworks",
  "invenio-queues",
  "invenio-search",
  "invenio-utilities-tuw",
  "opensearch-dsl",
  "pydantic",
]

optional-dependencies.dev = [
  "bumpver",
  "check-manifest",
  "pip-tools",
  "pipenv",
  "pytest>=7.3.2",
  "pytest-invenio",
  "pytest-runner",
  "requests-mock",
]
optional-dependencies.test = ["coverage"]

urls.Homepage = "https://github.com/MESH-Research/invenio-remote-user-data-kcworks"

scripts.user-data = "invenio_remote_user_data_kcworks.cli:cli"
entry-points."flask.commands".user-data = "invenio_remote_user_data_kcworks.cli:cli"
entry-points."invenio_base.api_apps".invenio_remote_user_data_kcworks = "invenio_remote_user_data_kcworks.ext:InvenioRemoteUserData"
entry-points."invenio_base.api_blueprints".invenio_remote_user_data_kcworks = "invenio_remote_user_data_kcworks.blueprints:create_api_blueprint"
entry-points."invenio_base.apps".invenio_remote_user_data_kcworks = "invenio_remote_user_data_kcworks.ext:InvenioRemoteUserData"
entry-points."invenio_base.blueprints".invenio_remote_user_data_kcworks_sso = "invenio_remote_user_data_kcworks.blueprints:create_sso_blueprint"
entry-points."invenio_celery.tasks".invenio_remote_user_data_kcworks = "invenio_remote_user_data_kcworks.tasks"
entry-points."invenio_queues.queues".invenio_remote_user_data_kcworks = "invenio_remote_user_data_kcworks.queues:declare_queues"

[dependency-groups]
dev = ["bumpver>=2025.1131"]

[tool.uv.sources]
invenio-group-collections-kcworks = { path = "../invenio-group-collections-kcworks", editable = true }

[tool.check-manifest]
ignore = [
  "* .mo",
  "*.bin",
  "*.gitkeep",
  ".*-requirements.txt",
  ".bzrignore",
  ".DS_Store",
  ".egg-info",
  ".egg-info/*",
  ".gitattributes",
  ".github/*",
  ".gitignore",
  ".hgsigs",
  ".hgtags",
  ".hgignore",
  ".travis.yml",
  "Jenkinsfile",
  "PKG-INFO",
  "setup.cfg",
  "*.lock",
  "Pipfile",
  ".vscode/*",
]

[tool.pytest.ini_options]
addopts = "--doctest-glob='*.rst' --doctest-modules"
testpaths = ["tests", "invenio_remote_user_data_kcworks"]

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bumping version {old_version} -> {new_version}."
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['^version = "{version}"', '^current_version = "{version}"']
"README.md" = ['^Version {version}']
VERSION = ['^"{version}"']
"invenio_remote_user_data_kcworks/__init__.py" = ['^__version__ = "{version}"']

[tool.pydocstyle]
add_ignore = "D401"
