# -*- coding: utf-8 -*-
#
# Copyright (C) 2024 MESH Research
#
# invenio-remote-user-data is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
version = attr: invenio_remote_user_data.__version__

[options.entry_points]
console_scripts =
    invenio-remote-user-data= invenio_remote_user_data.cli:cli
invenio_base.apps =
    invenio_remote_user_data = invenio_remote_user_data.ext:InvenioRemoteUserData
invenio_base.api_apps =
    invenio_remote_user_data = invenio_remote_user_data.ext:InvenioRemoteUserData
invenio_base.api_blueprints =
    invenio_remote_user_data = invenio_remote_user_data.views:create_api_blueprint
invenio_queues.queues =
    invenio_remote_user_data = invenio_remote_user_data.queues:declare_queues
invenio_celery.tasks =
    invenio_remote_user_data = invenio_remote_user_data.tasks


[check-manifest]
ignore =
    .*-requirements.txt
    *.bin
    *.gitkeep

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --doctest-glob="*.rst" --doctest-modules
testpaths = tests invenio_remote_user_data

[pydocstyle]
add_ignore = D401